# Sutradhar

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  TODO.md  pyproject.toml  tasks.ps1
.github/workflows/: ci.yml
clients/web/: app.js  index.html  worklet.js
deploy/: Dockerfile  docker-compose.yml
deploy/grafana/dashboards/: .gitkeep
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/prometheus/: prometheus.yml
docs/: PRD.md  architecture.md  latency_report.md
docs/adr/: 0001-record-architecture-decisions.md  0002-model-placement-on-4gb-vram.md  0003-transport-and-async-design.md  0004-barge-in-single-frame-loop.md
eval/: __init__.py
eval/scenarios/: __init__.py
mock_backend/: __init__.py  app.py  db.py
sutradhar/: __init__.py  app.py  cli.py  demo.py  runtime.py
sutradhar/core/: __init__.py  audio.py  cancellation.py  clock.py  config.py  errors.py  latency.py  pipeline.py  queues.py  session.py  types.py
sutradhar/dialogue/: __init__.py  memory.py  orchestrator.py  prompts.py  registry.py  state.py  tools_crm.py
sutradhar/interfaces/: __init__.py  base.py  llm.py  memory.py  stt.py  tools.py  tracer.py  transport.py  tts.py  turn.py  vad.py
sutradhar/observability/: __init__.py  logging.py  metrics.py  tracing.py
sutradhar/providers/: __init__.py  stub.py
sutradhar/providers/llm/: __init__.py  ollama.py  openai_compatible.py
sutradhar/providers/memory/: __init__.py  sqlite_store.py
sutradhar/providers/stt/: __init__.py  faster_whisper.py
sutradhar/providers/tts/: __init__.py  kokoro.py  piper.py
sutradhar/providers/turn/: __init__.py  detector.py
sutradhar/providers/vad/: __init__.py  silero.py  webrtc_vad.py
sutradhar/reliability/: __init__.py  circuit_breaker.py  failover.py  health.py  retries.py
sutradhar/tools/: __init__.py  doctor.py
sutradhar/transport/: __init__.py  loopback.py  telephony.py  websocket.py
tests/: conftest.py
tests/integration/: __init__.py  test_barge_in.py  test_crm_tools.py  test_m3_dialogue.py  test_pipeline_stub.py  test_real_audio_path.py  test_ws_transport.py
tests/unit/: test_app.py  test_audio.py  test_cancellation.py  test_config.py  test_factory_and_conformance.py  test_imports.py  test_latency.py  test_memory_sqlite.py  test_memory_window.py  test_mock_crm.py  test_queues.py  test_reliability.py  test_state_machine.py  test_stub_providers.py  test_tool_loop.py  test_tool_registry.py  test_turn_detector.py  test_types.py
